--- a/Dashboard/Resources/ResourcesFile.en.resx
+++ b/Dashboard/Resources/ResourcesFile.en.resx
@@ -1215,4 +1215,7 @@
   <data name="RefCode" xml:space="preserve">
     <value>Invitation code</value>
   </data>
+  <data name="PlayerGameWeakScore" xml:space="preserve">
+    <value>Player Game Weak Scores</value>
+  </data>
 </root>
