--- a/API/Resources/ResourcesFile.ar.resx
+++ b/API/Resources/ResourcesFile.ar.resx
@@ -162,6 +162,9 @@
   <data name="The code is incorrect!" xml:space="preserve">
     <value>الكود غير صحيح!</value>
   </data>
+  <data name="The players must be distinct!" xml:space="preserve">
+    <value>يجب أن يكون اللاعبون مختلفين!</value>
+  </data>
   <data name="The team must have 15 players!" xml:space="preserve">
     <value>يجب أن يضم الفريق 15 لاعبًا!</value>
   </data>
