--- a/Dashboard/Resources/ResourcesFile.ar.resx
+++ b/Dashboard/Resources/ResourcesFile.ar.resx
@@ -649,7 +649,7 @@
     <value>وصف قصير بالانجليزية</value>
   </data>
   <data name="SnapChatUrl" xml:space="preserve">
-    <value>رابط سناب شات</value>
+    <value>رابط يوتيوب</value>
   </data>
   <data name="Sponsor" xml:space="preserve">
     <value>الراعي</value>
