--- a/Dashboard/Resources/ResourcesFile.en.resx
+++ b/Dashboard/Resources/ResourcesFile.en.resx
@@ -787,7 +787,7 @@
     <value>Short Name English</value>
   </data>
   <data name="SnapChatUrl" xml:space="preserve">
-    <value>SnapChat Url</value>
+    <value>You Tube Url</value>
   </data>
   <data name="Sponsor" xml:space="preserve">
     <value>Sponsor</value>
