--- a/Dashboard/Resources/ResourcesFile.en.resx
+++ b/Dashboard/Resources/ResourcesFile.en.resx
@@ -1299,4 +1299,28 @@
   <data name="YoutubeUrl" xml:space="preserve">
     <value>You Tube Url</value>
   </data>
+  <data name="Mark" xml:space="preserve">
+    <value>Mark</value>
+  </data>
+  <data name="Marks" xml:space="preserve">
+    <value>Marks</value>
+  </data>
+  <data name="PlayerMark" xml:space="preserve">
+    <value>Player Mark</value>
+  </data>
+  <data name="PlayerMarks" xml:space="preserve">
+    <value>Player Marks</value>
+  </data>
+  <data name="Fk_GameWeaks" xml:space="preserve">
+    <value>Game Weaks</value>
+  </data>
+  <data name="Count" xml:space="preserve">
+    <value>Count</value>
+  </data>
+  <data name="Used" xml:space="preserve">
+    <value>Used</value>
+  </data>
+  <data name="Fk_TeamGameWeaks" xml:space="preserve">
+    <value>Team Game Weaks</value>
+  </data>
 </root>
